fixed responsive cropper in images big height

--- a/static/css/cropper.css
+++ b/static/css/cropper.css
@@ -19,18 +19,28 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  max-width: 100vw !important;
+  max-height: 50vh !important
 }
 
 .cropper-container img {
   display: block;
-  height: 100%;
+  max-height: 50vh !important;
   image-orientation: 0deg;
   max-height: none !important;
   max-width: none !important;
   min-height: 0 !important;
   min-width: 0 !important;
-  width: 100%;
+  max-width: 50vh !important;
 }
+
+.img-container{
+  max-width: 100vw !important;
+  max-height: 50vh !important
+}
+/* .img-container img{
+  width: 100% !important
+} */
 
 .cropper-wrap-box,
 .cropper-canvas,
@@ -48,6 +58,9 @@
 .cropper-canvas {
   overflow: hidden;
 }
+.cropper-wrap-box {
+  background: white
+}
 
 .cropper-drag-box {
   background-color: #fff;
@@ -55,7 +68,7 @@
 }
 
 .cropper-modal {
-  background-color: #000;
+  background-color: #fff;
   opacity: 0.5;
 }
 
